# VMInstallerCLI

./: README.md  VMInstallerCLI.gresource.xml  Virtualisation.md  generate_gresource_xml.sh  main.c  meson.build  readme.md  ui_file_list.txt  window.ui
bash-scripts/: copy_files.sh  free_storage_main_device.sh  grub_arguments.sh  hooks_generator.sh  install-cmd.example  install_romfile.sh  iommu_install_check.sh  isolcpu_script_generator.sh  kvm_conf_generator.sh  list_gpus.sh  main.sh  pci_ids.sh  revert.sh  setup_virsh_install_cmd.sh  user_groups_check.sh  virsh_install.sh  virsh_install_blueprint.sh  xml_edits.sh
bash-scripts/hooks/prepare/begin/: isolstart.sh  start.sh
bash-scripts/hooks/release/end/: isolrevert.sh  revert.sh
bash-scripts/tmp/: virsh_install.sh
